2023. 5.16. Replaced __EXPORT to __DZCO_EXPORT. [all]
2023. 5.16. Added dz_misc.h. [dz_misc, dz_tf, dz_sys, dz_ident_lag]
2023. 3.29. Reflected new specification of zArrayClass and zArray2Class. [dz_tf, dz_tf_fr, dz_lin, dz_sys, dz_sys_misc]
2023. 3.29. Modified config.lib and config.tools for C++ compilation. [src, tools]
2023. 3. 3. Modified dz_sys_adder_com, dz_sys_subtr_com, dz_sys_limit_com, dz_sys_fol_com, dz_sys_sol_com, dz_sys_pc_com, dz_sys_adapt_com, dz_sys_p_com, dz_sys_i_com, dz_sys_d_com, dz_sys_pid_com, dz_sys_qpd_com, dz_sys_bw_com, dz_sys_maf_com, dz_sys_tf_com, dz_sys_lin_com with the new definition of __EXPORT. [dz_sys_misc, dz_sys_lag, dz_sys_pid, dz_sys_filt_bw, dz_sys_filt_maf, dz_sys_tf, dz_sys_lin]
2023. 3. 3. Modified definition of dzSysFGPrototype to reflect the new definition of __EXPORT. [dzco_sys_fg]
2022. 9. 6. Corrected field designators to the up-to-date style. [dz_sys_misc, dz_sys_pid, dz_sys_lag, dz_sys_lin, dz_sys_tf, dz_sys_filt_maf, dz_sys_filt_bw, dz_sys_fg]
2022. 9. 5. Debugged return type of _dzSysTFPrmAlloc. [dz_sys_tf]
2022. 9. 5. Added explicit castings of utility void pointers. [dz_lin, dz_sys, dz_sys_lin, dz_sys_tf, dz_sys_filt_bw, dz_ident_lag]
2022. 9. 5. Corrected arithmetic of signed integer values. [dz_tf, dz_tf_fr, dz_lin, dz_sys, dz_sys_misc, dz_sys_filt_bw]
2022. 9. 4. Removed register keywords. [dz_tf, dz_tf_fr, dz_lin, dz_sys, dz_sys_misc, dz_sys_tf, dz_sys_filt_bw, dz_ident_lag]
2021.11. 3. Added dzco.h. [dzco]
2021.11. 3. Debugged some example codes. [example]
2021. 6. 1. Applied new zeda-makefile-gen to compilation of shared objects. [src]
2021. 6. 1. Modified allclean.sh in example to skip directories without makefile. [example]
2021. 5.30. Applied zeda-deb-gen. [makefile]
2021. 5. 8. Reflected -ansi option of zeda-makefile-gen. [app]
2021. 5. 7. Made tools/, and modified makefiles. [dzco, app, tools]
2021. 4.29. Modified app/makefile. [app]
2021. 4.29. Reflected new specification of zeda-config-gen. [app]