@@ -1,5 +1,5 @@
 PREFIX=$(HOME)/usr
 PROJNAME=dzco
-VERSION=1.5.0
+VERSION=1.5.1
 
-DEPENDENCY="zeda=1.7.0;zm=1.7.0"
+DEPENDENCY="zeda=1.7.2;zm=1.7.1"
